--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Site Do Caikão</title>
+	<title>Site do Caikão</title>
 </head>
 <body>
 <h1>Esse é meu site,</h1>
